--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "react-frontend",
   "version": "0.1.83",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@mantine/core": "^6.0.10",
+    "@mantine/hooks": "^6.0.10",
+    "@tabler/icons-react": "^2.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recoil": "^0.7.7",
     "web-vitals": "^3.0.3"
   },
   "eslintConfig": {
